# MobileJoystickControllerDef

./: .gitignore  .replit  PlayerController.cs  README.md  app.py  main.py  pyproject.toml  replit.nix
attached_assets/: Pasted-using-UnityEngine-using-System-Serializable-public-class-JoystickData-public-float-x-pub-1736366669387.txt  Pasted-using-UnityEngine-using-UnityEngine-AI-public-class-PlayerController-MonoBehaviour-p-1736781906177.txt
docs/: app_spec.md  code_mapping.md  technical_spec.md  user_manual.md  websocket_spec.md
static/: index.html
static/css/: styles.css
static/js/: controller.js  wasm-debug.js  websocket.js
templates/: controller.html  game.html
